--- a/config/database.yml
+++ b/config/database.yml
@@ -1,5 +1,5 @@
 # MySQL.  Versions 4.1 and 5.0 are recommended.
-# 
+#
 # Install the MYSQL driver
 #   gem install mysql2
 #
@@ -15,20 +15,20 @@ development:
   database: intranet_development
   pool: 5
   username: root
-  password:
+  password: gonsan2u
   host: localhost
 
 # Warning: The database defined as "test" will be erased and
 # re-generated from your development database when you run "rake".
 # Do not set this db to the same as development or production.
-test:
+test: &test
   adapter: mysql2
   encoding: utf8
   reconnect: false
   database: intranet_test
   pool: 5
   username: root
-  password:
+  password: gonsan2u
   host: localhost
 
 production:
@@ -40,3 +40,6 @@ production:
   username: root
   password:
   host: localhost
+
+cucumber:
+  <<: *test
