--- a/config/database.yml
+++ b/config/database.yml
@@ -25,7 +25,7 @@ test: &test
   adapter: mysql2
   encoding: utf8
   reconnect: false
-  database: intranet_test
+  database: intranet_development
   pool: 5
   username: root
   password: gonsan2u
